<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="demo.example.zwx.visitrecord.PersonInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mediumseagreen"
        android:orientation="horizontal"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:onClick="cancel"
            android:paddingLeft="@dimen/abc_text_size_title_material_toolbar"
            android:text="@string/cancel"
            android:layout_gravity="left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completeInfo"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:textSize="30dp"
            />
    </LinearLayout>

  <!--  <RelativeLayout
        android:background="@color/mediumseagreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout"
            layout="@layout/avatar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            >
        </include>

       &lt;!&ndash; <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:src="@drawable/setting"
            android:id="@+id/imageButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />&ndash;&gt;

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="许伟伟"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_below="@+id/layout"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>-->

    <LinearLayout
        android:background="@color/mintcream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="25dp"
            android:text="刘海动"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey"></LinearLayout>

    <LinearLayout
        android:background="@color/mintcream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/mobile"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="25dp"
            android:inputType="phone"
            android:text="15869166095"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey"></LinearLayout>

    <LinearLayout
        android:background="@color/mintcream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/address"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_weight="3"
            android:text="滨江区浦沿街道联庄一区115号"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey"></LinearLayout>

    <LinearLayout
        android:background="@color/mintcream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/birthday"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_weight="3"
            android:text="20115-11-25"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey"></LinearLayout>

    <LinearLayout
        android:background="@color/mintcream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/type"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:entries="@array/type"
            android:layout_weight="3"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:background="@color/mediumseagreen"
        android:textColor="@color/white"
        android:onClick="save"/>

</LinearLayout>
